--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/example
+spring.datasource.url=jdbc:postgresql://db:5432/example
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASSWORD:db-write}
 
