--- a/subscriber/src/main/resources/application.properties
+++ b/subscriber/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
@@ -8,7 +10,6 @@ spring.datasource.password=${POSTGRES_PASSWORD:db-write}
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 
 spring.redis.host=redis
